--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "clsx": "^2.1.1",
     "https-proxy-agent": "^7.0.6",
     "lucide-react": "^0.474.0",
-    "next": "15.1.5",
+    "next": "^15.1.5",
+    "pnpm": "^10.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
