--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@anthropic-ai/bedrock-sdk": "^0.12.0",
+    "@aws-sdk/client-lambda": "^3.812.0",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "echarts": "^5.6.0",
     "https-proxy-agent": "^7.0.6",
     "lucide-react": "^0.474.0",
     "next": "^15.1.5",
@@ -23,6 +25,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
